--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "devDependencies": {
         "nodemon": "^3.1.10",
         "prisma": "^6.8.2"
+    },
+    "prisma": {
+        "seed": "node prisma/seed.js"
     }
 }
