feat: integrate Vercel Blob upload for book cover image in createBook controller

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "description": "",
     "dependencies": {
         "@prisma/client": "^6.8.2",
+        "@vercel/blob": "^1.1.1",
+        "axios": "^1.9.0",
         "bcrypt": "^6.0.0",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
@@ -19,7 +21,8 @@
         "express": "^5.1.0",
         "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.2",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "multer": "^2.0.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.10",
